--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
 
     <header>
       <nav class="width70">
+
         <div>
           <img src="img/logo.png" alt="logo">
         </div>
+
+        <ul id="right-margin">
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Customers</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Pricing</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="#">Docs</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Login</a></li>
+          <li><button type="button" name="button">Sign up</button></li>
+        </ul>
 
       </nav>
 
