Section1- Jumbotron done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,31 @@
     <main>
                 <!--Sezione1 - Jumbotron-->
 
-      <section>
+      <section class="mysection1">
+        <div class="width70">
+
+          <div>
+            <h1>The simplest cloud platform for developers & teams</h1>
+            <p>Deploy, manage and scale cloud applications faster and more efficiently on DigitalOcean.We make managing infrastructure easy for teams and bussinesses, whether you're running one virtual machine or ten thousand.</p>
+          </div>
+
+          <div class="white">
+            <h2>Deploy your app in seconds.<br><span>Get started now.</span></h2>
+            <input type="email" placeholder= "Email" name="email" value="">
+            <input type="password" placeholder= "Password" name="password" value="">
+            <button class="buttonforjumbo" type="button" name="button">Create your account</button>
+            <button class="buttonforjumbo" id="myfix1" type="button" name="button">
+              <span id="google">
+                <img src="img/google-icon.png" alt="">
+              </span>
+              Sign up with google
+            </button>
+            <h6>By signing up you agree to the <a href="#">Terms of Service</a></h6>
+          </div>
+
+          </div>
+
+        </div>
 
       </section>
 
