--- a/index.html
+++ b/index.html
@@ -56,20 +56,38 @@
               <span id="google">
                 <img src="img/google-icon.png" alt="">
               </span>
-              Sign up with google
+            Sign up with google
             </button>
             <h6>By signing up you agree to the <a href="#">Terms of Service</a></h6>
           </div>
 
-          </div>
-
         </div>
-
       </section>
 
                     <!--Sezione 2-->
 
-      <section>
+      <section class="mysection2">
+        <div class="width70">
+
+          <h5>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h5>
+
+          <div>
+            <img src="img/docker.svg" alt="">
+            <img src="img/gitlab.svg" alt="">
+            <img src="img/slack.svg" alt="">
+            <img src="img/hashicorp.svg" alt="">
+            <img src="img/hashicorp.svg" alt="">
+            <img src="img/splunklogo.svg" alt="">
+          </div>
+
+          <h6>
+            <a href="#">
+              View customer stories >
+            </a>
+          </h6>
+
+
+        </div>
 
       </section>
 
