--- a/index.html
+++ b/index.html
@@ -86,15 +86,60 @@
             </a>
           </h6>
 
-
         </div>
-
       </section>
 
                   <!--Sezione 3-->
 
-      <section>
+      <section class="mysection3">
+        <div class="width70">
 
+          <h2>Deploy and scale seamlessly</h2>
+
+          <p>Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+
+          <div class="box">
+
+            <div class="myborder-list">
+              <ul>
+                <li>Deploy</li>
+                <li>Manage</li>
+                <li>Secure</li>
+                <li>Scale</li>
+                <li>Monitor</li>
+              </ul>
+            </div>
+
+            <div class="box2">
+
+              <div>
+                <img src="img/cluster-deploy.svg" alt="">
+                <h3>Cluster deployments</h3>
+                <p>Prevision multiple Droplets(virtual machines) in seconds with our control panel, CLI, or directly against our API.</p>
+              </div>
+
+              <div>
+                <img src="img/optimized-compute.svg" alt="">
+                <h3>Optimized compute types</h3>
+                <p>Get the compute resources you need with Standard or Optimized Droplets.</p>
+              </div>
+
+              <div>
+                <img src="img/one-click.svg" alt="">
+                <h3>One-click apps</h3>
+                <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+              </div>
+
+              <div>
+                <img src="img/global.svg" alt="">
+                <h3>Global availability</h3>
+                <p>Deploy to any of our data center regions around the world.</p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
       </section>
 
                   <!--Sezione 4-->
