--- a/index.html
+++ b/index.html
@@ -144,8 +144,33 @@
 
                   <!--Sezione 4-->
 
-      <section>
+      <section class="mysection2">
+        <div class="width70">
 
+          <h2>Designed for developers</h2>
+
+          <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+
+          <div class="arrow-image">
+
+            <i class="fas fa-chevron-left"></i>
+
+            <img src="img/screenshot-create-droplet-12336b41.jpg" alt="">
+
+            <i class="fas fa-chevron-right"></i>
+
+          </div>
+
+          <h6>Create compute servers in 55 seconds or less.</h6>
+
+          <div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+
+        </div>
       </section>
 
                   <!--Sezione 5-->
