--- a/index.html
+++ b/index.html
@@ -175,13 +175,136 @@
 
                   <!--Sezione 5-->
 
-      <section>
+      <section class="mysection3">
+        <div class="width70">
 
+          <h2>The features your business needs</h2>
+
+          <div class="box3">
+
+            <div>
+              <img src="img/pred-pricing.svg" alt="pricing">
+              <h3>Predictable pricing</h3>
+              <p>Leave complex pricing structures behind. Always know what you'll pay per month with a flat, industry-leaning pricing structure</p>
+              <a href="#">Pricing > ></a>
+            </div>
+
+            <div>
+              <img src="img/world-class.svg" alt="pricing">
+              <h3>World-class service</h3>
+              <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
+              <a href="#">Support > ></a>
+            </div>
+
+            <div>
+              <img src="img/reliable-platform.svg" alt="pricing">
+              <h3>Reliable platform</h3>
+              <p>More than 100.000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+              <a href="#">Security ></a>
+            </div>
+
+          </div>
+
+        </div>
       </section>
 
                   <!--Sezione 6-->
 
-      <section>
+      <section class="mysection6">
+        <div class="width70">
+
+          <h2>Service your customers around the world from 12 regions.</h2>
+
+          <div class="">
+
+            <table class="table">
+
+              <tr>
+                <td>AMS2</td>
+                <td>Amsterdam, Netherlands</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>AMS3</td>
+                <td>Amsterdam, Netherlands</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>BLR1</td>
+                <td>Bangalore, India</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>FRA1</td>
+                <td>Frankfurt, Germany</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>LON1</td>
+                <td>London, UK</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>NYC1</td>
+                <td>New York USA</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+            </table>
+
+            <table class="table">
+
+              <tr>
+                <td>AMS2</td>
+                <td>Amsterdam, Netherlands</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>AMS3</td>
+                <td>Amsterdam, Netherlands</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>BLR1</td>
+                <td>Bangalore, India</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>FRA1</td>
+                <td>Frankfurt, Germany</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>LON1</td>
+                <td>London, UK</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+              <tr>
+                <td>NYC1</td>
+                <td>New York USA</td>
+                <td><a href="#">Test Speed ></a></td>
+              </tr>
+
+            </table>
+
+
+
+          </div>
+
+
+
+
+
+        </div>
 
       </section>
 
