--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
           <h2>Service your customers around the world from 12 regions.</h2>
 
-          <div class="">
+          <div>
 
             <table class="table">
 
@@ -310,7 +310,35 @@
 
                   <!--Sezione 7-->
 
-      <section>
+      <section class="mysection7">
+        <div class="width70">
+
+          <h2>Development teams love DigitalOcean</h2>
+
+          <div class="arrow-image">
+
+            <i class="fas fa-chevron-left"></i>
+
+            <div class="white">
+              <img src="img/rockerbox-logo.webp" alt="">
+              <p>"We have been able to make scaling the technical infrastructure of our business cost effective"</p>
+              <h6>Rick o'Tootle <br> Co-founder and CTO</h6>
+              <a href="#">Read story ></a>
+            </div>
+
+            <i class="fas fa-chevron-right"></i>
+
+          </div>
+
+          <div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+
+
+        </div>
 
       </section>
 
