--- a/index.html
+++ b/index.html
@@ -344,7 +344,14 @@
 
                   <!--Sezione 8-->
 
-      <section>
+      <section class="mysection8">
+        <div class="width70">
+
+          <h2>Get started now</h2>
+
+          <button class="mysection7-button" type="button" name="button">Create your account</button>
+
+        </div>
 
       </section>
 
