--- a/index.html
+++ b/index.html
@@ -352,17 +352,75 @@
           <button class="mysection7-button" type="button" name="button">Create your account</button>
 
         </div>
-
       </section>
-
-
     </main>
 
                   <!--Footer-->
 
-    <footer>
+    <footer class="myfooter">
+      <div class="width70">
 
+        <div>
+          <img src="img/logo-small.svg" alt="">
+          <h6>© 2018 DigitalOcean, LLC. All rights reserved.<br> <span> Proudly made in NY </span></h6>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-square"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+        <ul>
+          <li><strong>Company</strong></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Leadership</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Partner network</a></li>
+          <li><a href="#">Referral Program</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Legal & Security</a></li>
+        </ul>
+
+        <ul>
+          <li><strong>Products</strong></li>
+          <li><a href="#">Droplets</a></li>
+          <li><a href="#">Spaces</a></li>
+          <li><a href="#">Kubernetes</a></li>
+          <li><a href="#">Load Balances</a></li>
+          <li><a href="#">Block Storage</a></li>
+          <li><a href="#">Tools & Integrations</a></li>
+          <li><a href="#">One-Click Apps</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Documentation</a></li>
+          <li><a href="#">Release Notes</a></li>
+        </ul>
+
+        <ul>
+          <li><strong>Community</strong></li>
+          <li><a href="#">Tutorials</a></li>
+          <li><a href="#">Meetups</a></li>
+          <li><a href="#">Q&A</a></li>
+          <li><a href="#">Write for Donations</a></li>
+          <li><a href="#">Droplets for Demo</a></li>
+          <li><a href="#">Hatch</a></li>
+          <li><a href="#">Shop Swag</a></li>
+          <li><a href="#">Research Program</a></li>
+          <li><a href="#">Currents Research</a></li>
+          <li><a href="#">Open Source</a></li>
+        </ul>
+
+        <ul>
+          <li><strong>Support</strong></li>
+          <li><a href="#">Contact Support</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Network Status</a></li>
+        </ul>
+
+      </div>
     </footer>
-
   </body>
 </html>
