--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
             <input type="password" placeholder= "Password" name="password" value="">
             <button class="buttonforjumbo" type="button" name="button">Create your account</button>
             <button class="buttonforjumbo" id="myfix1" type="button" name="button">
-              <span id="google">
-                <img src="img/google-icon.png" alt="">
-              </span>
-            Sign up with google
+              <span id="google"><img src="img/google-icon.png" alt=""></span>
+              <div>Sign up with google</div>
             </button>
             <h6>By signing up you agree to the <a href="#">Terms of Service</a></h6>
           </div>
