--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           <img src="img/logo.png" alt="logo">
         </div>
 
+        <i id="toggle" class="fas fa-bars"></i>
+
         <ul id="right-margin">
           <li><a href="#">Products</a></li>
           <li><a href="#">Customers</a></li>
@@ -31,6 +33,8 @@
           <li><a href="#">Login</a></li>
           <li><button type="button" name="button">Sign up</button></li>
         </ul>
+
+
 
       </nav>
 
