Toggle done perfectly

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
 
         <i id="toggle" class="fas fa-bars"></i>
 
-        <ul id="right-margin">
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Customers</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Pricing</a></li>
-        </ul>
+        <div class="listflex">
 
-        <ul>
-          <li><a href="#">Docs</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Login</a></li>
-          <li><button type="button" name="button">Sign up</button></li>
-        </ul>
+          <ul id="right-margin">
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+
+          <ul>
+            <li><a href="#">Docs</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Login</a></li>
+            <li><button type="button" name="button">Sign up</button></li>
+          </ul>
+
+        </div>
 
 
 
